[gd_scene load_steps=9 format=2]

[ext_resource path="res://DialogArea.gd" type="Script" id=1]
[ext_resource path="res://Hud/DialogBox/DialogInfo.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.8204

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 20, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 20, 0, 20, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 40, 0, 20, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 20, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="DialogArea" type="Area2D"]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )
timeline = "timeline-1619543009.json"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DialogInfo" type="AnimatedSprite" parent="."]
z_index = 5
frames = SubResource( 6 )
playing = true
offset = Vector2( 0, -24 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_DialogArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DialogArea_body_exited"]
